# management_films_service

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  makefile  pyproject.toml  settings.toml
app/: app.py  config.py  db.py  db_create.sql  logger.py  main.py
app/api/: auth_api.py  films_api.py  login.py  misc_api.py  movies.py  outers.py  routes.py
app/core/: app.py  auth.py  config.py  db.py  exceptions.py  logger.py  routes.py
app/databases/: base_db.py  user_db.py
app/models/: base.py  base_model.py  film_model.py  films.py  user_model.py  users.py  users_model.py
app/repositories/: base_repo.py  film_repo.py  user_repo.py
app/schemas/: film_schemas.py  misc_schemas.py  schemas.py  user_schema.py  user_schemas.py
app/services/: auth.py  film_service.py  film_services.py  kinopoisk_api.py  user_service.py
app/templates/: login.html  profile.html
frontend/templates/: register.html
