[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["yuramishin <robothot@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.36"
typer = "^0.15.1"
asyncpg = "^0.30.0"
jwt = "^1.3.1"
passlib = "^1.7.4"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
